[gd_scene load_steps=2 format=2]

[ext_resource path="res://ValueItem.gd" type="Script" id=1]

[node name="ValueItem" type="VBoxContainer" groups=[
"NonActiveOnOverlay",
]]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="." groups=[
"NonActiveOnOverlay",
]]
margin_right = 136.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HBoxContainer" groups=[
"NonActiveOnOverlay",
]]
margin_top = 5.0
margin_right = 74.0
margin_bottom = 19.0
text = "Value Item:"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer" groups=[
"NonActiveOnOverlay",
]]
margin_left = 78.0
margin_right = 136.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "10"

[node name="HSlider" type="HSlider" parent="." groups=[
"NonActiveOnOverlay",
]]
margin_top = 28.0
margin_right = 136.0
margin_bottom = 44.0
min_value = 10.0
max_value = 20.0
value = 10.0
[connection signal="text_entered" from="HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
